--- a/bodymovin/index.html
+++ b/bodymovin/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<body style="background-color:grey;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,6 +9,7 @@
     <style>
         anim{max-width: 1920px;margin: 0 auto;}
     </style>
+</body>
 </head>
 <body>
     <div id="anim"></div>
